--- a/example/templates/layout.html
+++ b/example/templates/layout.html
@@ -16,6 +16,7 @@
         <li>
             <a href="/">Home</a>
             <a href="/hello">Hello</a>
+            <a href="/users">Users</a>
         </li>
     </ul>
 
