--- a/example/templates/hello.html
+++ b/example/templates/hello.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
 </head>
-
+ 
 <body>
     <ul>
         <li>
             <a href="/">Home</a>
             <a href="/hello">Hello</a>
+            <a href="/users">Users</a>
         </li>
     </ul>
 
